# sae-icm

./: .gitignore  README.md  pyproject.toml  shell.sh
src/poet/: argparse.py  callbacks.py  compare_answers.py  config.py  config.yaml  config_adaptations.py  dataset.py  directories.py  embeddings.py  eval.py  explanation_similarity.py  finetune_sae.py  generate.py  heap.py  insert_sae.py  interpret_features.py  interpretability_score.py  intervene.py  intervene_dataset.py  load_sae.py  lora.py  math_eval.py  math_utils.py  model_config.py  orthogonality.py  plotting.py  pretrained.py  prompt_template.py  random_weights.py  register.py  sae.py  sae_preprocessing.py  spans.py  train.py  utils.py
