[project]
name = "poet"
version = "0.1.0"
description = ""
authors = [
    {name = "Moritz Miller",email = "moritz.miller@tuebingen.mpg.de"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
]

[tool.poetry]
packages = [{include = "poet", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
